RESOLVED FIXED192674
Fix leak of AVPlayer boundaryTimeObserver object.
https://bugs.webkit.org/show_bug.cgi?id=192674
Summary Fix leak of AVPlayer boundaryTimeObserver object.
Jer Noble
Reported 2018-12-13 13:00:35 PST
Fix leak of AVPlayer boundaryTimeObserver object.
Attachments
Patch (1.80 KB, patch)
2018-12-13 13:02 PST, Jer Noble
no flags
Radar WebKit Bug Importer
Comment 1 2018-12-13 13:02:12 PST
Jer Noble
Comment 2 2018-12-13 13:02:23 PST
Radar WebKit Bug Importer
Comment 3 2018-12-13 13:02:59 PST
David Kilzer (:ddkilzer)
Comment 4 2018-12-13 13:56:56 PST
WebKit Commit Bot
Comment 5 2018-12-13 14:32:40 PST
Comment on attachment 357246 [details] Patch Clearing flags on attachment: 357246 Committed r239180: <https://trac.webkit.org/changeset/239180>
WebKit Commit Bot
Comment 6 2018-12-13 14:32:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.