Fix leak of AVPlayer boundaryTimeObserver object. https://bugs.webkit.org/show_bug.cgi?id=192674

Reviewed by Eric Carlson.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::performTaskAtMediaTime):


Canonical link: https://commits.webkit.org/207253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239180 268f45cc-cd09-0410-ab3c-d52691b4dbfc